# imgui-starter

./: .gitignore  CMakeLists.txt  README.md  build.sh  imgui.ini  main.cpp  run.sh
imgui/: CMakeLists.txt
include/: CMakeLists.txt  GL  GLFW
